--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
     <div class="container">
         <a href="#inicio" class="logo-link">
-            <img src="Web\Assets\DAESPLOGO.jpg" alt="Logo de Academia Discord" class="logo">
+            <img src="DAESPLOGO.jpg" alt="Logo de Academia Discord" class="logo">
             <h1>Academia Discord</h1>
         </a>
         <nav>
@@ -79,4 +79,5 @@
 
     <script src="main.js"></script>
 </body>
+
 </html>
